fix: Widget label should not overlap widget action icons

--- a/app/web/caretaker-controlpanel/caretaker-controlpanel-widget.less
+++ b/app/web/caretaker-controlpanel/caretaker-controlpanel-widget.less
@@ -50,6 +50,7 @@
       position: absolute;
       right: 8px;
       top: 6px;
+      background-color: #7A8288;
 
       grapp-fa-icon {
         -webkit-transition: 1s linear opacity;
